--- a/synved-option/style/admin.css
+++ b/synved-option/style/admin.css
@@ -1,5 +1,17 @@
-.synved-option-style-important {
+.synved-option-type-addon .description {
+line-height:26px;
+}
+
+.synved-option-style-important,
+.synved-option-style-addon-important {
 background-color:#ffe4e0;
+}
+.synved-option-style-addon-important-installed {
+background-color:#e0ffe4;
+}
+.synved-option-style-group-active th,
+.synved-option-style-group-active td {
+padding-top:2em;
 }
 .synved-option-important th {
 }
